--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "http://wjschultz.github.io/my-website",
+  "homepage": "http://www.wjschultz.com",
   "name": "my-website",
   "version": "0.1.0",
   "private": true,
